# Solmix

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json
backend/: .env  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: comment.py  compile.py  deploy.py  edit.py  explain.py  gen_deploy_code.py  get_vulnerability.py  parse.py
backend/app/core/: config.py  datamodels.py  log.py
backend/app/utils/: deploy_script.txt  llm_api.py  utils.py
backend/http/: test_compile.http  test_doesnt_compile.http  test_get_Governor_vulnerabilities.http  test_get_vulnerabiliy.http  test_parse.http
backend/src/: app.ts  index.ts
backend/src/config/: env.ts
backend/src/controllers/: dummyController.ts  parseSolidity.ts  vulnerabilityAnalysis.ts
backend/src/routes/: dummyRoute.ts  parseRoute.ts  vulnerabilityAnalysisRoute.ts
fastApi/: config-example.toml  llm_api.py  main.py
fastApi/res/: deploy_script_sample.txt
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/app/: page.tsx
hardhat/: hardhat.config.ts  package-lock.json  package.json
hardhat/@openzeppelin/contracts@4.9.5,/: package-lock.json
hardhat/scripts/deployments/: MyGovernor.ts
hardhat3/: package-lock.json  package.json
hardhat3/contracts/: MyGovernor.sol
hardhat3/ignition/modules/: MyGovernor.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: blocklyTheme.ts  blocklyToolbox.ts  (+1 more)
(+70 files in other folders)
